refactoring xml zeugs